assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {

    body {
        @apply bg-slate-900;
    }

    h1, h2, h3, h4, h5, h6 {
        @apply text-coda-yellow font-header font-bold;
    }
    h1 {
        @apply text-4xl;
    }
    h2 {
        @apply pt-4 text-2xl;
    }

    a, a:visited {
        @apply text-coda-yellow underline underline-offset-2;
    }
    a:hover, a:active {
        @apply text-amber-100 underline underline-offset-2;
    }

    div {
        @apply text-coda-green;
    }
}

@layer components {

    .actionButton {
        @apply m-1 mt-2 bg-slate-700 hover:bg-coda-green border border-coda-yellow rounded text-center;
    } 
    .actionButtonText {
        @apply text-coda-yellow hover:text-amber-100;
    }
    
    .articleList {
        @apply mt-2 ml-6 text-justify marker:text-coda-yellow;
    }

    .article {
        @apply px-2;
    }
    .article p {
        @apply mt-2 mb-4 text-left sm:text-justify leading-5;
    }
    .article a {
        @apply text-coda-purple hover:text-purple-400;
    }
    .article ul, .article ol {
        @apply ml-4 text-justify marker:text-coda-yellow;
    }
    .article li {
        @apply before:content-['•_'] before:text-coda-purple
    }
    .article code {
        @apply text-coda-yellow font-code;
    }
    .article h2 > a {
        @apply text-coda-yellow hover:text-amber-200;
    }
    
    .article pre {
        @apply border border-coda-yellow bg-slate-700 mx-2 mt-1 mb-4 px-2 py-1 overflow-x-auto whitespace-nowrap;
    }

    /*
    .code {
        @apply bg-transparent text-white font-code;
    }
    span.code {
        @apply text-coda-yellow px-px py-0;
    }
    div.code {
        @apply border border-coda-yellow bg-slate-700 mx-2 mt-1 mb-4 px-2 py-1 text-left overflow-x-scroll whitespace-nowrap;
    }
    */

    .j-key {
        @apply text-blue-500 font-bold;
    }

    .j-var {
        @apply text-fuchsia-500;
    }

    .j-lit {
        @apply text-orange-400;
    }

    .j-val {
        @apply text-teal-300;
    }

    .j-com {
        @apply text-gray-400;
    }

}

